# exercise_c-

./: CMakeLists.txt  Worker0.h  acctabc.h  arfupt.cpp  arith.cpp  arrayone.cpp  arrfun1.cpp  arrfun3.cpp  assign.cpp  brass.h  calling.cpp  carrot.cpp  choices1.cpp  cinfish.cpp  client_tcp.cpp  compstr2.cpp  delete.cpp  equal.cpp  file2.cpp  filefunc.cpp  firstref.cpp  floatnum.cpp  fltadd.cpp  forloop.cpp  formore.cpp  fun_ptr.cpp  generate  getinfo.cpp  hexoct.cpp  hexoct2.cpp  httpserver.cpp  ifelse.cpp  instr3.cpp  jump.cpp  left.cpp  leftover.cpp  lotto.cpp  mixtypes01.cpp  more_and.cpp  mytime0.cpp  (+63 more)
src/: CMakeLists.txt  queuetp.h  rtti1.cpp  stcktp1.h  tv.cpp  tvfm.h  use_tv.cpp  workermi.cpp  workermi.h  workmi.cpp
targer/: .httpserver.cpp.swp  Client.cpp  acctABC.cpp  addpntrs.cpp  address.cpp  and.cpp  append.cpp  arfupt1.cpp  arraynew.cpp  arraytp.h  arrfun2.cpp  arrfun4.cpp  arrobj.cpp  arrstruc.cpp  assgn_st.cpp  atrctfun.cpp  auto.cpp  babys-first.c  bank.cpp  binary.cpp  binary01.h  block.cpp  bondini.cpp  brass.cpp  callable.cpp  cctypes.cpp  chartype.cpp  check_it.cpp  choices.cpp  cinexcp.cpp  cingolf.cpp  compstr1.cpp  constcast.cpp  convert.cpp  copyit.cpp  count.cpp  cubes.cpp  deaults.cpp  divide.cpp  dma.cpp  (+154 more)
test/: test_demo.cpp
