cmake_minimum_required(VERSION 3.22)
project(Demo2)
set(CMAKE_CXX_STANDARD 11)

set(BOOST_ROOT ./boost_1_84_0)
find_package(BOOST 1.84.0 COMPONENTS thread)
if(Boost_FOUND)
    message(Boost_INCLUDE_DIRS " ${Boost_INCLUDE_DIRS}")
    message(Boost_LIBRARY_DIRS " ${Boost_LIBRARY_DIRS}")
    include_directories(${Boost_INCLUDE_DIRS})
    link_directories(${Boost_LIBRARY_DIRS})
    add_executable(boost main.cpp)
endif()
aux_source_directory(./src DIR_SRCS)
add_executable(Demo ${DIR_SRCS})